# sightloop

./: .gitignore  AGENTS.md  Makefile  README.md
.githooks/: commit-msg  common.sh  pre-commit
backend/: README.md  pyproject.toml
backend/configs/: dev.yaml  jetson.yaml  test.yaml
backend/scripts/: benchmark_detection.py  capture_calibration_frames.py  debug_yolo_classes.py  debug_yolo_on_frames.py  run_camera.py  run_detection.py  run_tracking.py  validate_camera_setup.py
backend/src/sightloop_vision/: __init__.py
backend/src/sightloop_vision/adapters/: __init__.py
backend/src/sightloop_vision/app/: __init__.py  runner.py
backend/src/sightloop_vision/core/: __init__.py  calibration.py  camera.py  config.py  debug.py  detection.py  output.py
backend/src/sightloop_vision/models/: __init__.py  detection.py  frame.py  track.py  zone.py  zone_state.py
backend/tests/fixtures/: test_config.yaml
backend/tests/integration/: test_camera_pipeline_fake_source.py
backend/tests/unit/: test_artifact_paths.py  test_baseline_writer.py  test_calibration_manifest.py  test_camera_validation.py  test_config_loader.py  test_debug_save_interval.py  test_detection_baseline.py  test_detection_filters.py  test_detection_models.py  test_detection_quality_gate.py  test_detection_quality_report.py  test_detection_renderer.py  test_fps_tracker.py  test_frame_and_camera.py  test_frame_writer.py  test_model_registry.py  test_session_stats.py  test_simple_tracker.py  test_zone_loader.py  test_zone_manager.py  test_zone_models.py  test_zone_report.py  test_zone_report_writer.py
(+84 files in other folders)
