[project]
name = "sightloop-vision"
version = "0.1.0"
description = "Camera-based vision service for SightLoop"
readme = "README.md"
authors = [
    { name = "Veer Thiara", email = "veersingh27@live.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
camera = [
    "opencv-python>=4.8",
]
detection = [
    "ultralytics>=8.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "numpy>=1.26",
]

[project.scripts]
sightloop-vision = "sightloop_vision.app.runner:main"
pytest = "pytest:console_main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
